# listvsgeneric

./: README.md  listvsgeneric.cabal  profile.html  profile2.html
bench/: Profile.hs
src/: Competition.hs
src/Competition/: Generic.hs  Internal.hs  List.hs
test/: CompetitionSpec.hs  Main.hs
