Name:                   listvsgeneric
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Competition
                        Competition.List
                        Competition.Generic
  Build-Depends:        base >= 4.6 && < 5
                      , transformers
                      , transformers-base
                      , mtl
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Other-Modules:        Competition
                        Competition.List
                        Competition.Generic
  Ghc-Options:          -Wall -threaded
  Main-Is:              Main.hs
  Build-Depends:        base
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances
                      , transformers
                      , transformers-base
                      , mtl
                      , containers

Benchmark profile
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , bench
  Other-Modules:        Competition
                        Competition.List
                        Competition.Generic
  Ghc-Options:          -Wall -threaded
  Main-Is:              Profile.hs
  Build-Depends:        base
                      , transformers
                      , transformers-base
                      , mtl
                      , containers
                      , criterion

Source-Repository head
  Type:                 git
--  Location:
